- add delete logFile endpoint - fix NoSuchFileException